--- a/demo02.html
+++ b/demo02.html
@@ -51,9 +51,9 @@
         el: '#app2',
         data: {
             foods: [
-                { id: 0, text: '蔬菜' },
-                { id: 1, text: '奶酪' },
-                { id: 2, text: '随便其它什么人吃的东西' }
+                { id: 0, text: '苹果' },
+                { id: 1, text: '生菜' },
+                { id: 2, text: '红烧肉' }
             ]
         }
     })
