--- a/demo01.html
+++ b/demo01.html
@@ -9,19 +9,20 @@
 
 <body>
     <!-- 1 -->
-    <div id="app">
+    <div id="app1">
         <p>{{ message }}</p>
     </div>
     <script>
     /* app与dom#app绑定 */
     /* 修改app.message将会直接影响dom中的内容 */
-    var app = new Vue({
+    var app1 = new Vue({
         el: '#app',
         data: {
             message: 'Hello Vue.js!'
         }
     })
     </script>
+    <hr>
     <!-- 2 -->
     <div id="app-2">
         <!-- v-bind指令将vue对象的message属性与dom元素的title属性绑定 -->
@@ -33,16 +34,16 @@
     var app2 = new Vue({
         el: '#app-2',
         data: {
-            message: '页面加载于 ' + new Date()
-                .toLocaleString()
+            message: '页面加载于 ' + new Date().toLocaleString()
         }
     })
     </script>
+    <hr>
     <!-- 3 -->
     <div id="app-3">
         <!-- v-if指令根据vue对象中的show属性做条件判断 -->
-        <p v-if="show">这里可以显示</p>
-        <p v-if="hide">这里被隐藏了</p>
+        <p v-if="show">v-if指令让这里可以显示</p>
+        <p v-if="hide">v-if指令让这里被隐藏了</p>
     </div>
     <script>
     var app3 = new Vue({
@@ -53,10 +54,11 @@
         }
     })
     </script>
+    <hr>
     <!-- 4 -->
     <div id="app-4">
+    	<p>v-for指令可以遍历数组中的元素</p>
         <ol>
-            <!-- v-for指令可以遍历数组中的元素 -->
             <li v-for="todo in todos">
                 {{ todo.text }}
             </li>
@@ -74,6 +76,7 @@
         }
     })
     </script>
+    <hr>
     <!-- 5 -->
     <div id="app-5">
         <p>{{ message }}</p>
@@ -95,6 +98,7 @@
         }
     })
     </script>
+    <hr>
     <!-- 6 -->
     <div id="app-6">
         <p>{{ message }}</p>
@@ -106,6 +110,58 @@
         el: '#app-6',
         data: {
             message: 'Hello Vue!'
+        }
+    })
+    </script>
+    <hr>
+    <!-- 7 -->
+    <script>
+    /*Vue.component方法可以自定义组件*/
+    Vue.component('todo-item', {
+        template: '<li>这是个待办项</li>'
+    })
+    </script>
+    <div id="app7">
+        <ol>
+            <!-- 在模板代码中使用自定义组件 -->
+            <todo-item></todo-item>
+        </ol>
+    </div>
+    <script>
+    /*将模板实例化为Vue对象*/
+    var app7 = new Vue({
+        el: '#app7'
+    })
+    </script>
+    <hr>
+    <!-- 8 -->
+    <div id="app8">
+        <ol>
+            <!--
+              现在我们为每个 item 提供 name 对象
+              name 对象是变量，即其内容可以是动态的。
+              我们也需要为每个组件提供一个“key”
+            -->
+            <item v-for="food in foods" v-bind:name="food" v-bind:key="food.id">
+            </item>
+        </ol>
+    </div>
+    <script>
+    Vue.component('item', {
+        // item 组件现在接受一个
+        // "prop"，类似于一个自定义属性。
+        // 这个 prop 名为 name
+        props: ['name'],
+        template: '<li>{{ name.text }}</li>'
+    })
+    var app8 = new Vue({
+        el: '#app8',
+        data: {
+            foods: [
+                { id: 0, text: '苹果' },
+                { id: 1, text: '生菜' },
+                { id: 2, text: '红烧肉' }
+            ]
         }
     })
     </script>
