--- a/demo02.html
+++ b/demo02.html
@@ -1,62 +1,108 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>02</title>
+    <meta charset="UTF-8">
+    <title>03</title>
     <script src="https://cdn.bootcss.com/vue/2.4.2/vue.min.js"></script>
 </head>
 
 <body>
-    <!-- 1 -->
     <script>
-    /*Vue.component方法可以自定义组件*/
-    Vue.component('todo-item', {
-        template: '<li>这是个待办项</li>'
-    })
-    </script>
-    <div id="app1">
-        <ol>
-            <!-- 在模板代码中使用自定义组件 -->
-            <todo-item></todo-item>
-        </ol>
-    </div>
-    <script>
-    /*将模板实例化为Vue对象*/
-    var app1 = new Vue({
-        el: '#app1'
-    })
+    (function() {
+        // 我们的数据对象
+        var data = { a: 1 };
+        // 该对象被加入到一个 Vue 实例中
+        var vm = new Vue({
+            data: data
+        });
+        // 获得这个实例上的属性
+        // 返回源数据中对应的字段
+        console.log(vm.a == data.a); // true
+
+        // 设置属性也会影响到原始数据
+        vm.a = 2;
+        console.log(data.a); // 2
+
+        // ……反之亦然
+        data.a = 3;
+        console.log(vm.a); // 3
+        /* 当这些数据改变时，视图会进行重渲染 */
+        /* 只有data中已存在的属性才是响应式的 */
+        /* 新增属性将不会出发视图更新 */
+        /*
+         如果你知道你会在晚些时候需要一个属性，
+         但是一开始它为空或不存在，
+         那么你仅需要设置一些初始值。
+         如：
+          data: {
+            newTodoText: '',
+            visitCount: 0,
+            hideCompletedTodos: false,
+            todos: [],
+            error: null
+          }
+        */
+        /*
+          如果使用Object.freeze()方法将对象冻结了，由于无法改变对象属性
+          Vue的响应系统也无法再追踪变化。
+            var obj = {
+              foo: 'bar'
+            }
+
+            Object.freeze(obj)
+
+            new Vue({
+              el: '#app',
+              data: obj
+            })
+         */
+    })();
     </script>
     <!-- 2 -->
-    <div id="app2">
-        <ol>
-            <!--
-              现在我们为每个 item 提供 name 对象
-              name 对象是变量，即其内容可以是动态的。
-              我们也需要为每个组件提供一个“key”
-            -->
-            <item v-for="food in foods" v-bind:name="food" v-bind:key="food.id">
-            </item>
-        </ol>
-    </div>
+    <div id="example"></div>
     <script>
-    Vue.component('item', {
-        // item 组件现在接受一个
-        // "prop"，类似于一个自定义属性。
-        // 这个 prop 名为 name
-        props: ['name'],
-        template: '<li>{{ name.text }}</li>'
-    })
-    var app2 = new Vue({
-        el: '#app2',
+    var data = { a: 1 };
+    var vm = new Vue({
+        el: '#example',
+        data: data
+    });
+    /*Vue暴露了一些实例属性和方法。为了与用户定义属性区分，它们都有$前缀*/
+    console.log(vm.$data === data); // => true
+    console.log(vm.$el === document.getElementById('example')); // => true
+
+    // $watch 是一个实例方法:用于观察属性变化
+    vm.$watch('a', function(newValue, oldValue) {
+        // 这个回调将在 `vm.a` 改变后调用
+        // 可以在控制台尝试改变vm.a的值
+        console.log(newValue, oldValue);
+    });
+    </script>
+    <!-- 3 -->
+    <script>
+    new Vue({
         data: {
-            foods: [
-                { id: 0, text: '苹果' },
-                { id: 1, text: '生菜' },
-                { id: 2, text: '红烧肉' }
-            ]
+            a: 1
+        },
+        beforeCreate: function() {},
+        /* 生命周期回调函数(钩子函数) */
+        created: function() {
+            // `this` 指向 vm 实例
+            console.log('a is: ' + this.a); // a is: 1
+        },
+        beforeMount: function() {},
+        mounted: function() {
+            console.log("mounted");
+        },
+        beforeUpdate: function() {},
+        updated: function() {
+            console.log("updated");
+        },
+        beforeDestory: function() {},
+        destroyed: function() {
+            console.log("destroyed");
         }
-    })
+    });
     </script>
 </body>
 
