--- a/demo04.html
+++ b/demo04.html
@@ -3,100 +3,172 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>04</title>
+    <title>demo05</title>
     <script src="https://cdn.bootcss.com/vue/2.4.2/vue.min.js"></script>
 </head>
 
 <body>
-    <!-- 插值 -->
-    <!-- mustache语法 -->
-    <p id="app1">Message: {{ msg }}</p>
+    <!-- 1 -->
+    <div id="app01">
+        {{ message.split('').reverse().join('') }}
+    </div>
     <script>
-    var app1 = new Vue({ el: '#app1', data: { msg: 'mustache语法' } });
+    var app01 = new Vue({ el: '#app01', data: { message: 'this is message' } });
     </script>
-    <!-- 一次性插值，插值后此处不再变化 -->
-    <p id="app2" v-once>这个将不会改变: {{ msg }}</p>
+    <!-- 2 -->
+    <div id="app02">
+        <p>Original message: "{{ message }}"</p>
+        <p>Computed reversed message: "{{ reversedMessage }}"</p>
+    </div>
     <script>
-    var app2 = new Vue({ el: '#app2', data: { msg: '这个值绑定一次修改后不再被渲染' } });
+    var app02 = new Vue({
+        el: '#app02',
+        data: { message: 'this is message' },
+        computed: {
+            // 计算属性的 getter
+            reversedMessage: function() {
+                // `this` 指向 vm 实例
+                return this.message.split('').reverse().join('');
+            }
+        }
+    });
     </script>
-    <!-- html转义 -->
-    <!-- mustache会自动转义 -->
-    <p id="app3">Using mustaches: {{ rawHtml }}</p>
+    <!-- 3 -->
+    <div id="app03">
+        <p>Original message: "{{ message }}"</p>
+        <p>Computed reversed message: "{{ reversedMessage() }}"</p>
+    </div>
     <script>
-    var app3 = new Vue({ el: '#app3', data: { rawHtml: "<span style='color:red'>红色的字</span>" } });
+    var app03 = new Vue({
+        el: '#app03',
+        data: { message: 'this is message' },
+        methods: {
+            // 计算属性是基于它们的依赖进行缓存的
+            // 依赖的值发生改变才会重新求值
+            // 调用methods是临时计算的
+            reversedMessage: function() {
+                return this.message.split('').reverse().join('');
+            }
+        }
+    });
     </script>
-    <!-- 如果我们要展示html内容，而不执行转义，需要v-html指令 -->
-    <p id="app4">Using v-html directive: <span v-html="rawHtml"></span></p>
+    <!-- 4 -->
+    <div id="app04">
+        <p>current time: "{{ now }}"</p>
+    </div>
     <script>
-    var app4 = new Vue({ el: '#app4', data: { rawHtml: "<span style='color:red'>红色的字</span>" } });
+    var app04 = new Vue({
+        el: '#app04',
+        data: { time: new Date() },
+        computed: { now: function() { return this.time.toUTCString(); } }
+    });
     </script>
-    <!-- 属性插值不能使用mustache语法 -->
-    <p id="app5" v-bind:id="dynamicId"></p>
+    <!-- 5 -->
+    <div id="app05">
+        <p>current time: "{{ now() }}"</p>
+    </div>
     <script>
-    var app5 = new Vue({ el: '#app5', data: { dynamicId: 'abc' } });
+    var app05 = new Vue({
+        el: '#app05',
+        data: { time: new Date() },
+        methods: { now: function() { return this.time.toUTCString(); } }
+    });
     </script>
-    <!-- mustache语法中支持javascript表达式 -->
-    <p id="app6">{{ number + 1 }} {{ ok ? 'YES' : 'NO' }} {{ message.split('').reverse().join('') }}</p>
     <script>
-    var app6 = new Vue({ el: '#app6', data: { number: 10, ok: true, message: 'this is message' } });
+    setInterval(() => {
+        app04.time = app05.time = new Date();
+    }, 1000);
     </script>
-    <!-- v-bind指令也支持javascript表达式 -->
-    <div id="app7" v-bind:id="'list-' + id"></div>
+    <!-- 6 -->
+    <div id="app06">{{fullName}}</div>
     <script>
-    var app7 = new Vue({ el: '#app7', data: { id: 10 } });
+    var app06 = new Vue({
+        el: '#app06',
+        data: {
+            firstName: 'Foo',
+            lastName: 'Bar'
+        },
+        computed: {
+            fullName: function() {
+                return this.firstName + ' ' + this.lastName
+            }
+        }
+    });
     </script>
-    <!-- 赋值语句、控制流语句等其他结构都不支持 -->
-    <!-- 这是语句，不是表达式 -->
-    <p id="app8">{{ var a = 1 }}</p>
+    <!-- 7 -->
+    <div id="app07">{{fullName}}</div>
     <script>
-    var app8 = new Vue({ el: '#app8', data: { a: 10 } });
+    var app07 = new Vue({
+        el: '#app07',
+        data: {
+            firstName: 'Foo',
+            lastName: 'Bar'
+        },
+        computed: {
+            fullName: {
+                // getter
+                get: function() {
+                    return this.firstName + ' ' + this.lastName;
+                },
+                // setter
+                set: function(newValue) {
+                    var names = newValue.split(' ');
+                    this.firstName = names[0];
+                    this.lastName = names[names.length - 1];
+                }
+            }
+        }
+    });
     </script>
-    <!-- 流控制也不会生效，请使用三元表达式 -->
-    <p id="app9">{{ if (ok) { return message } }}</p>
+    <!-- 8 -->
+    <div id="app08">
+        <p>
+            Ask a yes/no question:
+            <input v-model="question">
+        </p>
+        <p>{{answer}}</p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
     <script>
-    var app9 = new Vue({ el: '#app9', data: { ok: true, message: 'this is message' } });
-    </script>
-    <!-- 指令，vue指令都以v为前缀 -->
-    <!-- v-if指令根据seen判断是否插入或移除p元素 -->
-    <p id="app10" v-if="seen">现在你看到我了</p>
-    <script>
-    var app10 = new Vue({ el: '#app10', data: { seen: true } });
-    </script>
-    <!-- v-bind指令，用于绑定元素属性 -->
-    <p id="app11"><a v-bind:href="url">...</a></p>
-    <script>
-    var app11 = new Vue({ el: '#app11', data: { url: 'http://www.baidu.com' } });
-    </script>
-    <!-- v-on指令，用于绑定元素事件 -->
-    <p id="app12"><a v-on:click="doSomething">...</a></p>
-    <script>
-    var app12 = new Vue({ el: '#app12', methods: { doSomething: () => alert('点击了超链接') } });
-    </script>
-    <!-- .prevent 修饰符告诉 v-on 指令对于触发的事件调用 event.preventDefault() -->
-    <form id="app13" v-on:submit.prevent="onSubmit"><input type="submit"></form>
-    <script>
-    var app13 = new Vue({ el: '#app13', methods: { onSubmit: () => alert('提交表单') } });
-    </script>
-    <!-- 缩写 -->
-    <!-- 完整语法 -->
-    <p id="app14"><a v-bind:href="url">...</a></p>
-    <script>
-    var app14 = new Vue({ el: '#app14', data: { url: 'http://www.baidu.com' } });
-    </script>
-    <!-- 缩写 -->
-    <p id="app15"><a :href="url">...</a></p>
-    <script>
-    var app15 = new Vue({ el: '#app15', data: { url: 'http://www.baidu.com' } });
-    </script>
-    <!-- 完整语法 -->
-    <p id="app16"><a v-on:click="doSomething">...</a></p>
-    <script>
-    var app16 = new Vue({ el: '#app16', methods: { doSomething: () => alert('点击了超链接') } });
-    </script>
-    <!-- 缩写 -->
-    <p id="app17"><a @click="doSomething">...</a></p>
-    <script>
-    var app17 = new Vue({ el: '#app17', methods: { doSomething: () => alert('点击了超链接') } });
+    var app08 = new Vue({
+        el: '#app08',
+        data: {
+            question: '',
+            answer: 'I cannot give you an answer until you ask a question!'
+        },
+        watch: {
+            // 如果 `question` 发生改变，这个函数就会运行
+            question: function(newQuestion, oldQuestion) {
+                this.answer = 'Waiting for you to stop typing...';
+                this.debouncedGetAnswer();
+            }
+        },
+        created: function() {
+            // `_.debounce` 是一个通过 Lodash 限制操作频率的函数。
+            // 在这个例子中，我们希望限制访问 yesno.wtf/api 的频率
+            // AJAX 请求直到用户输入完毕才会发出。想要了解更多关于
+            // `_.debounce` 函数 (及其近亲 `_.throttle`) 的知识，
+            // 请参考：https://lodash.com/docs#debounce
+            this.debouncedGetAnswer = _.debounce(this.getAnswer, 500);
+        },
+        methods: {
+            getAnswer: function() {
+                if (this.question.indexOf('?') === -1) {
+                    this.answer = 'Questions usually contain a question mark. ;-)';
+                    return;
+                }
+                this.answer = 'Thinking...';
+                var vm = this;
+                axios.get('https://yesno.wtf/api')
+                    .then((response) => {
+                        vm.answer = _.capitalize(response.data.answer);
+                    }).catch((error) => {
+                        vm.answer = 'Error! Could not reach the API. ' + error;
+                    });
+            }
+        }
+    });
     </script>
 </body>
 
