--- a/demo03.html
+++ b/demo03.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>04</title>
+    <title>03 模板语法</title>
     <script src="https://cdn.bootcss.com/vue/2.4.2/vue.min.js"></script>
 </head>
-
 <body>
     <!-- 插值 -->
     <!-- mustache语法 -->
@@ -115,5 +113,4 @@
     var app17 = new Vue({ el: '#app17', methods: { doSomething: () => alert('点击了超链接') } });
     </script>
 </body>
-
 </html>
