--- a/demo04.html
+++ b/demo04.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>demo05</title>
+    <title>demo04 计算属性和监听器</title>
     <script src="https://cdn.bootcss.com/vue/2.4.2/vue.min.js"></script>
 </head>
-
 <body>
     <!-- 1 -->
     <div id="app01">
@@ -178,5 +176,4 @@
     });
     </script>
 </body>
-
 </html>
