--- a/demo06.html
+++ b/demo06.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>demo06</title>
+    <title>demo06 条件渲染</title>
     <script src="https://cdn.bootcss.com/vue/2.4.2/vue.min.js"></script>
 </head>
-
 <body>
     <div id="app01">
         <h1 v-if="ok">Yes</h1>
@@ -120,5 +118,4 @@
     });
     </script>
 </body>
-
 </html>
