--- a/demo02.html
+++ b/demo02.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>03</title>
+    <title>02 Vue实例</title>
     <script src="https://cdn.bootcss.com/vue/2.4.2/vue.min.js"></script>
 </head>
-
 <body>
     <script>
     (function() {
@@ -19,11 +17,9 @@
         // 获得这个实例上的属性
         // 返回源数据中对应的字段
         console.log(vm.a == data.a); // true
-
         // 设置属性也会影响到原始数据
         vm.a = 2;
         console.log(data.a); // 2
-
         // ……反之亦然
         data.a = 3;
         console.log(vm.a); // 3
@@ -49,9 +45,7 @@
             var obj = {
               foo: 'bar'
             }
-
             Object.freeze(obj)
-
             new Vue({
               el: '#app',
               data: obj
@@ -71,7 +65,6 @@
     /*Vue暴露了一些实例属性和方法。为了与用户定义属性区分，它们都有$前缀*/
     console.log(vm.$data === data); // => true
     console.log(vm.$el === document.getElementById('example')); // => true
-
     // $watch 是一个实例方法:用于观察属性变化
     vm.$watch('a', function(newValue, oldValue) {
         // 这个回调将在 `vm.a` 改变后调用
@@ -106,5 +99,4 @@
     });
     </script>
 </body>
-
 </html>
